dependency versions change

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/shanpatel371/MLB_GCH_FanApp/issues"
   },
-  "homepage": "https://github.com/shanpatel371/MLB_GCH_FanApp#readme"
+  "homepage": "https://github.com/shanpatel371/MLB_GCH_FanApp#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.4"
+  }
 }
